--- a/public/index.html
+++ b/public/index.html
@@ -3,41 +3,103 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
     <title>Hand Written Digit Classifier</title>
   </head>
   <body>
-    <h1 style="margin-left: 100px">Handwriting Classifier!</h1>
-    <canvas
-      id="canvas"
-      width="280"
-      height="280"
-      style="position: absolute; top: 200; left: 100; border: 8px solid"
-    ></canvas>
-    <img
-      id="canvasimg"
-      style="position: absolute; top: 10%; left: 52%; display: none"
-      width="280px"
-      height="280px"
-    />
-    <input
-      type="button"
-      value="classify"
-      id="sb"
-      size="48"
-      style="position: absolute; top: 500; left: 150"
-    />
-    <input
-      width="240px"
-      type="button"
-      value="clear"
-      id="cb"
-      size="23"
-      style="position: absolute; top: 500; left: 250"
-    />
-
-    <h1 id="output" style="margin-left: 100px; margin-top: -20px"></h1>
+    <div class="container">
+      <div class="jumbotron">
+        <h1 class="text-center">Handwriting Classifier!</h1>
+      </div>
+      <div class="row justify-content-center">
+        <div
+          class="col-6 d-flex justify-content-center"
+          style="border: 1px solid black"
+        >
+          <h1 class="" id="output"></h1>
+        </div>
+      </div>
+      <div class="row justify-content-center mt-2">
+        <div
+          class="col-6 d-flex justify-content-center"
+          style="border: 1px solid black"
+        >
+          <canvas
+            id="canvas"
+            width="280"
+            height="280"
+            style="border: 8px solid"
+          ></canvas>
+        </div>
+      </div>
+      <div class="row justify-content-center mt-3">
+        <div class="col-6">
+          <img
+            id="canvasimg"
+            width="280px"
+            height="280px"
+            style="display: none"
+          />
+        </div>
+      </div>
+      <div class="row justify-content-center mt-3">
+        <div
+          class="col-6 d-flex justify-content-center"
+          style="border: 1px solid black"
+        >
+          <input type="button" value="classify" id="sb" size="48" />
+          <p style="margin-left: 10px; margin-right: 10px"></p>
+          <input type="button" value="clear" id="cb" size="23" />
+        </div>
+      </div>
+      <div class="row justify-content-center mt-3">
+        <div class="col-6 d-flex justify-content-center">
+          <input
+            type="file"
+            accept="image/*"
+            onchange="onFileSelected(event)"
+          />
+        </div>
+      </div>
+    </div>
 
     <script src="script.js" type="module"></script>
+    <script>
+      function onFileSelected(event) {
+        console.log("file selected");
+        var selectedFile = event.target.files[0];
+        var reader = new FileReader();
+
+        var imgtag = document.getElementById("canvasimg");
+        imgtag.title = selectedFile.name;
+
+        reader.onload = function (event) {
+          imgtag.src = event.target.result;
+        };
+
+        reader.readAsDataURL(selectedFile);
+      }
+    </script>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
