--- a/public/index.html
+++ b/public/index.html
@@ -18,18 +18,12 @@
         <h1 class="text-center">Handwriting Classifier!</h1>
       </div>
       <div class="row justify-content-center">
-        <div
-          class="col-6 d-flex justify-content-center"
-          style="border: 1px solid black"
-        >
+        <div class="col-6 d-flex justify-content-center">
           <h1 class="" id="output"></h1>
         </div>
       </div>
       <div class="row justify-content-center mt-2">
-        <div
-          class="col-6 d-flex justify-content-center"
-          style="border: 1px solid black"
-        >
+        <div class="col-6 d-flex justify-content-center">
           <canvas
             id="canvas"
             width="280"
@@ -49,10 +43,7 @@
         </div>
       </div>
       <div class="row justify-content-center mt-3">
-        <div
-          class="col-6 d-flex justify-content-center"
-          style="border: 1px solid black"
-        >
+        <div class="col-6 d-flex justify-content-center">
           <input type="button" value="classify" id="sb" size="48" />
           <p style="margin-left: 10px; margin-right: 10px"></p>
           <input type="button" value="clear" id="cb" size="23" />
